--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,10 @@
   <artifactId>spring_course</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
+  <properties>
+    <maven.compiler.source>18</maven.compiler.source>
+    <maven.compiler.target>18</maven.compiler.target>
+  </properties>
   <name>spring_course Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
